--- a/asset/css/contents.scss
+++ b/asset/css/contents.scss
@@ -989,10 +989,10 @@
     background:#ffe4e3 url(../images/common/icon_analysis_on.png) no-repeat center center;
   }
   &.agree{
-    background: url(../images/common/icon_agree_off.png) no-repeat 10px center;
+    background: url(../images/common/icon_agree_off.png) no-repeat center center;
   }  
   &.agree.on{
-    background:#ffe4e3 url(../images/common/icon_agree_on.png) no-repeat 10px center;
+    background:#ffe4e3 url(../images/common/icon_agree_on.png) no-repeat center center;
   }
 }
 .btnEdit{
