--- a/asset/css/contents.scss
+++ b/asset/css/contents.scss
@@ -237,12 +237,13 @@
   }
 }
 .insuranceListBox{
+  padding-top: 10px;
   .contentScroll{
-    height: 756px !important;
+    height: 774px !important;
   }
   &.consulting{
     .contentScroll{
-      height: 713px !important;
+      height: 741px !important;
     }
   }
   .noteBox{
@@ -446,6 +447,16 @@
     }
   }
   &.disabled{
+    .logo{
+      /*! Gray v1.6.0 (https://github.com/karlhorky/gray) | MIT */
+      .grayscale{
+        filter:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='saturate' values='0'/></filter></svg>#grayscale");
+        -webkit-filter:grayscale(1);
+        filter:grayscale(1);
+        filter:gray;
+        opacity: 0.45;
+      }
+    }
     .name{
       color:$colorLevel5;
     }
