컨설팅 css 수정

--- a/css/gu.renew.contents.scss
+++ b/css/gu.renew.contents.scss
@@ -244,7 +244,7 @@
             border-radius: 10px;
             font-weight: 500;
             line-height: 17px;
-            content: "_n_e_w";
+            content: "NEW";
             text-align: center;
             letter-spacing: -0.025em;
             color: #ff4858;
