--- a/css/gu.renew.layout.scss
+++ b/css/gu.renew.layout.scss
@@ -787,6 +787,9 @@
           margin-right: 10px;
           padding-right: 27px;
           background: url("../images/gu.renew.contents/icon_alert.png") no-repeat right top;
+          span{
+            margin: 0;
+          }
         }
       }
     }
