--- a/mobile/css/gu.renew.contents.scss
+++ b/mobile/css/gu.renew.contents.scss
@@ -31,7 +31,7 @@
     .item {
       position: relative;
       display: block;
-      padding: 0 20px;
+      padding: 0px 20px;
 
       &:last-child {
         .tr{
