--- a/mobile/css/gu.renew.contents.scss
+++ b/mobile/css/gu.renew.contents.scss
@@ -6,9 +6,57 @@
   text-align: center;
 }
 
+/* customer_list_box */
+.customer_list_box{  
+  padding: 0 20px;
+  
+  .customer_add {
+    width: 100%;
+    text-align: center;
+    margin-top:10px;
+
+    .btn_customer_add {
+      display: block;
+      padding: 45px 0 40px;
+      border-radius: 10px;
+      background: #fff;
+      font-size: $fz15px;
+      text-align: center;
+      letter-spacing: -0.075em;
+      color: $color_level2;
+      position: relative;
+
+      &:before {
+        display: block;
+        width: 29px;
+        height: 29px;
+        margin: 0 auto 8px;
+        border: 1px solid #dfe3eb;
+        border-radius: 50%;
+        background: url(../images/gu.renew.common/icon_add.png) no-repeat center center;
+        background-size: 14px 14px;
+        content: "";
+      }
+
+      &:active:after {
+        display: block;
+        position: absolute;
+        top: -1px;
+        left: 0;
+        width: calc(100% - 3px);
+        height: calc(100% - 1.5px);
+        border: 1.5px solid #fe5855;
+        border-radius: 8px;
+        content: "";
+        box-shadow: 4px 5px 5px 0px rgba(0, 0, 0, 0.15);
+        transition: none;
+      }
+    }
+  }
+} 
+
 /* 테이블형 리스트 */
 .list_table_type {
-  padding: 0 20px;
 
   .tbody_box {
     padding-top: 1px;
@@ -102,49 +150,20 @@
     }
 
   }
+}
 
-  .customer_add {
-    width: 100%;
-    text-align: center;
-    margin-top:10px;
-
-    .btn_customer_add {
-      display: block;
-      padding: 45px 0;
-      border-radius: 10px;
-      background: #fff;
-      font-size: $fz15px;
-      text-align: center;
-      letter-spacing: -0.075em;
-      color: $color_level2;
-      position: relative;
-
-      &:before {
-        display: block;
-        width: 29px;
-        height: 29px;
-        margin: 0 auto 8px;
-        border: 1px solid #dfe3eb;
-        border-radius: 50%;
-        background: url(../images/gu.renew.common/icon_add.png) no-repeat center center;
-        background-size: 14px 14px;
-        content: "";
-      }
-
-      &:active:after {
-        display: block;
-        position: absolute;
-        top: -1px;
-        left: 0;
-        width: calc(100% - 3px);
-        height: calc(100% - 1.5px);
-        border: 1.5px solid #fe5855;
-        border-radius: 8px;
-        content: "";
-        box-shadow: 4px 5px 5px 0px rgba(0, 0, 0, 0.15);
-        transition: none;
-      }
+/* 그리드형 리스트 */
+.list_grid_type{
+  .item{
+    position: relative;
+    background: #fff;
+    margin:0 0 10px;
+    &:last-child{
+      margin:0;
     }
+  }
+  .customer_info{
+    padding: 15px 20px;
   }
 }
 
